# cargo-workspace

./: Cargo.toml  Justfile
crates/api/: Cargo.toml
crates/api/public/: index.html  index.js
crates/api/src/: main.rs
crates/arc/: Cargo.toml
crates/arc/src/: main.rs
crates/const_singleton/: Cargo.toml
crates/const_singleton/src/: lib.rs
crates/dblogger/: Cargo.toml
crates/dblogger/src/: lib.rs  main.rs
crates/domain-ip-sync/: Cargo.toml
crates/domain-ip-sync/src/: logger.rs  main.rs
crates/ent/: Cargo.toml
crates/ent/derive_ent/: Cargo.toml  Justfile
crates/ent/derive_ent/src/: derive_fields.rs  lib.rs
crates/ent/derive_ent/tests/ui/: invalid-field-type.rs  invalid-field-type.stderr  item-is-not-a-struct.rs  item-is-not-a-struct.stderr
crates/exec_playground/: Cargo.toml
crates/exec_playground/src/: main.rs
crates/repositories/: Cargo.toml
crates/repositories/src/: builder.rs  lib.rs  main.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  main.rs
db-scripts/: init.sql
