[package]
name = "dblogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
async_once = "0.2.6"
chrono = "0.4.31"
const_singleton = { version = "0.1.0", path = "../const_singleton" }
lazy_static = "1.4.0"
secrets = { path = "../secrets" }
shared = { version = "0.1.0", path = "../shared" }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
