[package]
name = "domain-ip-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56.1"
aws-sdk-route53 = "0.33.0"
env_logger = "0.10.0"
log = "0.4.20"
public-ip = "0.2.2"
simple_logger = "4.2.0"
simplelog = "0.12.1"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
const_singleton = { path = "../const_singleton" }
lazy_static = "1.4.0"
