[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.94"
tokio = { version = "1.27.0", features = ["full"] }
